--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0",
-    "webpack-shell-plugin-next": "^2.2.2"
+    "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
